changed Class#newInstance() to Class#getConstructor()#newInstance which isn't deprecated after java 8